// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should match the snapshot when the currentUserId is greater than or equal to 0 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 3,
      "flexDirection": "column",
      "height": "90%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0.4,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Themed.Icon
      color="white"
      name="user-circle"
      padding={15}
      size={70}
      type="font-awesome"
    />
    <Component>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        placeholder="Username"
        style={
          Object {
            "backgroundColor": "white",
            "borderColor": "gray",
            "borderWidth": 2,
            "height": 40,
            "opacity": 0.7,
            "padding": 5,
            "textAlign": "center",
            "top": -30,
            "width": 200,
          }
        }
        underlineColorAndroid="transparent"
        value="heather5"
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        password={true}
        placeholder="Password"
        secureTextEntry={true}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "gray",
              "borderWidth": 2,
              "height": 40,
              "opacity": 0.7,
              "padding": 5,
              "textAlign": "center",
              "top": -30,
              "width": 200,
            },
            Object {
              "top": -20,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value="matt"
      />
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 15,
              "padding": 10,
              "width": 200,
            },
            Object {
              "backgroundColor": "#e9e9e9",
              "top": -10,
            },
          ]
        }
      >
        <Component
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Log in
        </Component>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "borderRadius": 15,
            "padding": 10,
            "width": 200,
          }
        }
      >
        <Component
          style={
            Array [
              Object {
                "textAlign": "center",
              },
              Object {
                "color": "white",
              },
            ]
          }
        >
          Click here to create an account
        </Component>
      </TouchableOpacity>
    </Component>
  </ImageBackground>
</KeyboardAvoidingView>
`;

exports[`Login should match the snapshot when the currentUserId is greater than or equal to 0 2`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 3,
      "flexDirection": "column",
      "height": "90%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0.4,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Component>
      <Themed.Icon
        color="white"
        name="user-circle"
        padding={15}
        size={70}
        top={50}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "color": "white",
            "fontSize": 24,
            "fontWeight": "bold",
            "textAlign": "center",
            "top": 55,
          }
        }
      >
        heather5
      </Component>
    </Component>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 15,
            "padding": 10,
            "width": 200,
          },
          Object {
            "backgroundColor": "#e9e9e9",
            "top": -10,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        Log out
      </Component>
    </TouchableOpacity>
  </ImageBackground>
</Component>
`;

exports[`Login should match the snapshot when this.state.isLoginPage is false 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 3,
      "flexDirection": "column",
      "height": "90%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0.4,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Component>
      <Themed.Icon
        color="white"
        name="user-circle"
        padding={15}
        size={70}
        top={50}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "color": "white",
            "fontSize": 24,
            "fontWeight": "bold",
            "textAlign": "center",
            "top": 55,
          }
        }
      >
        heather5
      </Component>
    </Component>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 15,
            "padding": 10,
            "width": 200,
          },
          Object {
            "backgroundColor": "#e9e9e9",
            "top": -10,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        Log out
      </Component>
    </TouchableOpacity>
  </ImageBackground>
</Component>
`;

exports[`Login should match the snapshot when this.state.isLoginPage is true 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 3,
      "flexDirection": "column",
      "height": "90%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0.4,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Component>
      <Themed.Icon
        color="white"
        name="user-circle"
        padding={15}
        size={70}
        top={50}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "color": "white",
            "fontSize": 24,
            "fontWeight": "bold",
            "textAlign": "center",
            "top": 55,
          }
        }
      >
        heather5
      </Component>
    </Component>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 15,
            "padding": 10,
            "width": 200,
          },
          Object {
            "backgroundColor": "#e9e9e9",
            "top": -10,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        Log out
      </Component>
    </TouchableOpacity>
  </ImageBackground>
</Component>
`;
